[FIX] Restored gap in row

--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ header {
 .row {
     display: flex;
     flex-wrap: wrap;
+    gap: 10px;
 }
 
 .col-25 {
